tests/snapshots/test_backtrace__rust_frames_in_backtrace@unix.snap
---
source: tests/test_backtrace.rs
expression: traceback
---
Traceback (most recent call last):
  File "[RUST_CORE]/ops/function.rs", line 250, in <fn() -> core::result::Result<(), alloc::string::String> as core::ops::function::FnOnce<()>>::call_once
  File "[RUST_CORE]/ops/function.rs", line 250, in <test_backtrace::test_rust_frames_in_backtrace::{closure#0} as core::ops::function::FnOnce<()>>::call_once
    extern "rust-call" fn call_once(self, args: Args) -> Self::Output;
  File "./tests/test_backtrace.rs", line 7, in test_backtrace::test_rust_frames_in_backtrace::{closure#0}
    fn test_rust_frames_in_backtrace() {
  File "./tests/test_backtrace.rs", line 16, in test_backtrace::test_rust_frames_in_backtrace
    Python::attach(|py| {
  File "./src/marker.rs", line 419, in <pyo3::marker::Python>::attach::<test_backtrace::test_rust_frames_in_backtrace::{closure#0}, ()>
    f(guard.python())
  File "./tests/test_backtrace.rs", line 24, in test_backtrace::test_rust_frames_in_backtrace::{closure#0}
    .run(
  File "./src/marker.rs", line 643, in <pyo3::marker::Python>::run
    code.run(globals, locals).map(|obj| {
  File "./src/types/code.rs", line 136, in <pyo3::instance::Bound<pyo3::types::code::PyCode> as pyo3::types::code::PyCodeMethods>::run
    .assume_owned_or_err(self.py())
  File "./src/ffi_ptr_ext.rs", line 47, in <*mut pyo3_ffi::object::PyObject as pyo3::ffi_ptr_ext::FfiPtrExt>::assume_owned_or_err
    unsafe { Bound::from_owned_ptr_or_err(py, self) }
  File "./src/instance.rs", line 384, in <pyo3::instance::Bound<pyo3::types::any::PyAny>>::from_owned_ptr_or_err
    None => Err(PyErr::fetch(py)),
  File "./src/err/mod.rs", line 361, in <pyo3::err::PyErr>::fetch
    PyErr::take(py).unwrap_or_else(failed_to_fetch)
  File "<string>", line 4, in <module>
  File "<string>", line 2, in python_func
  File "./tests/test_backtrace.rs", line 11, in test_backtrace::test_rust_frames_in_backtrace::__pyfunction_produce_err_result
    #[pyfunction]
  File "./tests/test_backtrace.rs", line 13, in test_backtrace::test_rust_frames_in_backtrace::produce_err_result
    Err(PyValueError::new_err("Error result"))
  File "./src/exceptions.rs", line 31, in <pyo3::exceptions::PyValueError>::new_err::<&str>
    $crate::PyErr::new::<$name, A>(args)
